<resources>
    <string name="app_name">MoviesApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movie_list_fragment_label">Movie List</string>
    <string name="add_new_movie_fragment_label">Add New Movie</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description:</string>
    <string name="actors">Actors:</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_director">Movie Director</string>
    <string name="movie_description">Movie Description</string>
    <string name="add_movie">Add Movie</string>
    <string name="error_movie_not_found">Error! Movie not found.</string>
    <string name="actor_name">Actor Name</string>
    <string name="add_actor">Add Actor</string>
</resources>